; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/gyro/extr_fxas21002c_core.c_fxas21002c_scale_get.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/gyro/extr_fxas21002c_core.c_fxas21002c_scale_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fxas21002c_data = type { i32, i32* }

@F_FS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fxas21002c_data*, i32*)* @fxas21002c_scale_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fxas21002c_scale_get(%struct.fxas21002c_data* %0, i32* %1) #0 {
  %3 = alloca %struct.fxas21002c_data*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.fxas21002c_data* %0, %struct.fxas21002c_data** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = load %struct.fxas21002c_data*, %struct.fxas21002c_data** %3, align 8
  %9 = getelementptr inbounds %struct.fxas21002c_data, %struct.fxas21002c_data* %8, i32 0, i32 0
  %10 = call i32 @mutex_lock(i32* %9)
  %11 = load %struct.fxas21002c_data*, %struct.fxas21002c_data** %3, align 8
  %12 = getelementptr inbounds %struct.fxas21002c_data, %struct.fxas21002c_data* %11, i32 0, i32 1
  %13 = load i32*, i32** %12, align 8
  %14 = load i64, i64* @F_FS, align 8
  %15 = getelementptr inbounds i32, i32* %13, i64 %14
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @regmap_field_read(i32 %16, i32* %5)
  store i32 %17, i32* %7, align 4
  %18 = load i32, i32* %7, align 4
  %19 = icmp slt i32 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %2
  br label %32

21:                                               ; preds = %2
  %22 = load %struct.fxas21002c_data*, %struct.fxas21002c_data** %3, align 8
  %23 = load i32, i32* %5, align 4
  %24 = call i32 @fxas21002c_range_fs_from_value(%struct.fxas21002c_data* %22, i32 %23)
  store i32 %24, i32* %6, align 4
  %25 = load i32, i32* %6, align 4
  %26 = icmp slt i32 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %21
  %28 = load i32, i32* %6, align 4
  store i32 %28, i32* %7, align 4
  br label %32

29:                                               ; preds = %21
  %30 = load i32, i32* %6, align 4
  %31 = load i32*, i32** %4, align 8
  store i32 %30, i32* %31, align 4
  br label %32

32:                                               ; preds = %29, %27, %20
  %33 = load %struct.fxas21002c_data*, %struct.fxas21002c_data** %3, align 8
  %34 = getelementptr inbounds %struct.fxas21002c_data, %struct.fxas21002c_data* %33, i32 0, i32 0
  %35 = call i32 @mutex_unlock(i32* %34)
  %36 = load i32, i32* %7, align 4
  ret i32 %36
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @regmap_field_read(i32, i32*) #1

declare dso_local i32 @fxas21002c_range_fs_from_value(%struct.fxas21002c_data*, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
